--- a/package.json
+++ b/package.json
@@ -5,21 +5,44 @@
   "main": "script.js",
   "scripts": {
     "start": "http-server ./dist -p 3900",
-    "build": "pug ./src/pug/index.pug ./src/pug/counter.pug -o ./dist -P && sass ./src/sass/style.scss ./dist/style.css",
+    "build-old": "pug ./src/pug/index.pug ./src/pug/counter.pug -o ./dist -P && sass ./src/sass/style.scss ./dist/style.css",
+    "build": "webpack --config webpack.dev --progress --colors",
+    "watch": "webpack --config webpack.dev --colors --watch",
     "pug": "pug ./src/pug/index.pug ./src/pug/counter.pug -o ./dist -P",
     "pug-watch": "pug -w ./src/pug/index.pug ./src/pug/counter.pug -o ./dist -P",
     "sass": "sass ./src/sass/style.scss ./dist/style.css",
     "sass-watch": "sass --watch ./src/sass/style.scss ./dist/style.css",
-    "watch": "pug -w ./src/pug/index.pug ./src/pug/counter.pug -o ./dist -P && sass --watch ./src/sass/style.scss ./dist/style.css",
+    "watch-old": "pug -w ./src/pug/index.pug ./src/pug/counter.pug -o ./dist -P && sass --watch ./src/sass/style.scss ./dist/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.1.1",
+    "envify": "^4.1.0",
+    "eslint": "^5.16.0",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "0.11.1",
+    "jshint": "^2.10.2",
+    "jshint-loader": "^0.8.4",
+    "node-sass": "^4.11.0",
     "pug": "2.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "sass": "1.17.4",
-    "http-server":"0.11.1"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "transform-loader": "^0.2.4",
+    "uglify-es": "^3.3.9",
+    "uglify-js-es6": "^2.8.9",
+    "uglifyes-webpack-plugin": "^0.4.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1",
+    "pug-loader": "^2.4.0"
   }
 }
