--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "compression-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "envify": "^4.1.0",
     "eslint": "^5.16.0",
@@ -33,6 +34,7 @@
     "node-sass": "^4.11.0",
     "pug": "2.0.3",
     "pug-cli": "^1.0.0-alpha6",
+    "pug-loader": "^2.4.0",
     "sass": "1.17.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -42,7 +44,6 @@
     "uglifyes-webpack-plugin": "^0.4.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-merge": "^4.2.1",
-    "pug-loader": "^2.4.0"
+    "webpack-merge": "^4.2.1"
   }
 }
