--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vue-router": "^3.0.6"
   },
   "eslintConfig": {
     "root": true,
