--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "idb": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
