--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
-    "idb": "^4.0.3"
+    "idb": "^4.0.3",
+    "azure-storage": "2.10.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
